--- a/inventory/mycluster/inventory.ini
+++ b/inventory/mycluster/inventory.ini
@@ -2,37 +2,31 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-# node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
-# node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
-# node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
-# node4 ansible_host=95.54.0.15  # ip=10.3.0.4 etcd_member_name=etcd4
-# node5 ansible_host=95.54.0.16  # ip=10.3.0.5 etcd_member_name=etcd5
-# node6 ansible_host=95.54.0.17  # ip=10.3.0.6 etcd_member_name=etcd6
+xy-kube-cp-01 ansible_host=xy-kube-cp-01 ip=10.50.0.11 local_as=65003
+xy-kube-cp-02 ansible_host=xy-kube-cp-02 ip=10.50.0.12 local_as=65003
+xy-kube-cp-03 ansible_host=xy-kube-cp-03 ip=10.50.0.13 local_as=65003
+xy-kube-w-01 ansible_host=xy-kube-w-01 ip=10.50.0.14 local_as=65003
+xy-kube-w-02 ansible_host=xy-kube-w-02 ip=10.50.0.15 local_as=65003
 
 # ## configure a bastion host if your nodes are not directly reachable
 # [bastion]
 # bastion ansible_host=x.x.x.x ansible_user=some_user
 
 [kube_control_plane]
-# node1
-# node2
-# node3
+xy-kube-cp-01
+xy-kube-cp-02
+xy-kube-cp-03
 
 [etcd]
-# node1
-# node2
-# node3
+xy-kube-cp-01
+xy-kube-cp-02
+xy-kube-cp-03
 
 [kube_node]
-# node2
-# node3
-# node4
-# node5
-# node6
-
-[calico_rr]
+xy-kube-w-01
+xy-kube-w-02
 
 [k8s_cluster:children]
 kube_control_plane
 kube_node
-calico_rr
+
