认证仓库信息配置 for containerd

--- a/inventory/mycluster/group_vars/all/containerd.yml
+++ b/inventory/mycluster/group_vars/all/containerd.yml
@@ -35,16 +35,15 @@
 ## example define mirror.registry.io or 172.19.16.11:5000
 ## set "name": "url". insecure url must be started http://
 ## Port number is also needed if the default HTTPS port is not used.
-# containerd_insecure_registries:
-#   "localhost": "http://127.0.0.1"
-#   "172.19.16.11:5000": "http://172.19.16.11:5000"
+containerd_insecure_registries:
+  "10.70.8.100:8090": "http://10.70.8.100:8090"
 
 # containerd_registries:
 #   "docker.io": "https://registry-1.docker.io"
 
-# containerd_max_container_log_line_size: -1
+containerd_max_container_log_line_size: 10000
 
-# containerd_registry_auth:
-#   - registry: 10.0.0.2:5000
-#     username: user
-#     password: pass
+containerd_registry_auth:
+  - registry: 10.70.8.100:8090
+    username: admin
+    password: admin123
