异构集群部署 kubespray 源码调整

--- a/inventory/mycluster/group_vars/all/offline.yml
+++ b/inventory/mycluster/group_vars/all/offline.yml
@@ -108,4 +108,4 @@ krew_download_url: "{{ files_repo }}/github.com/kubernetes-sigs/krew/releases/do
 # containerd_ubuntu_repo_repokey: 'YOURREPOKEY'
 
 #download_delegate if download_force_cache else inventory_hostname
-download_run_once: True
+download_run_once: False
