--- a/roles/download/tasks/download_file.yml
+++ b/roles/download/tasks/download_file.yml
@@ -80,14 +80,16 @@
   # Ansible 2.9 requires we convert a generator to a list
   - name: Download_file | Get the list of working mirrors
     set_fact:
-      valid_mirror_urls: "{{ uri_result.results | selectattr('failed', 'eq', False) | map(attribute='mirror') | list }}"
+      #valid_mirror_urls: "{{ uri_result.results | selectattr('failed', 'eq', False) | map(attribute='mirror') | list }}"
+      valid_mirror_urls: "{{ download.url }}"
     delegate_to: "{{ download_delegate if download_force_cache else inventory_hostname }}"
 
   # This must always be called, to check if the checksum matches. On no-match the file is re-downloaded.
   # This task will avoid logging it's parameters to not leak environment passwords in the log
   - name: Download_file | Download item
     get_url:
-      url: "{{ valid_mirror_urls | random }}"
+      #url: "{{ valid_mirror_urls | random }}"
+      url: "{{ valid_mirror_urls }}"
       dest: "{{ file_path_cached if download_force_cache else download.dest }}"
       owner: "{{ omit if download_localhost else (download.owner | default(omit)) }}"
       mode: "{{ omit if download_localhost else (download.mode | default(omit)) }}"
